# saregama

./: .gitignore  .rust-toolchain.toml  Cargo.toml  config.example.toml  devbox.json
src/: api.rs  config.rs  lib.rs  main.rs
src/api/oauth/: extractor.rs  mod.rs  spotify.rs
src/extensions/: spotify.rs
ytapi/: devbox.json  pyproject.toml
ytapi/saregama_ytmusic/: __init__.py
ytapi/saregama_ytmusic/routes/: playlists.py
ytapi/saregama_ytmusic/schema/: __init__.py  playlist.py  track.py
ytapi/saregama_ytmusic/scripts/: __init__.py
ytapi/saregama_ytmusic/ytmusic/: __init__.py  client.py
ytapi/tests/: get_playlist.py
