[package]
name = "saregama"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["cookie", "cookie-signed"] }
once_cell = "1.19.0"
rspotify = { version = "0.12.0", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
